fix center align for numeric

--- a/css/styles.css
+++ b/css/styles.css
@@ -761,6 +761,12 @@ li.auto_comp {
 }
 
 
+td.numerique {
+   text-align:right;
+   width:80px;
+   padding-right:60px;
+}
+
 
 /* ################--------------- Espacement des blocs ---------------#################### */
 
